Fix ember-notify out of viewport bubbles

--- a/frontend/app/styles/notify.less
+++ b/frontend/app/styles/notify.less
@@ -4,6 +4,7 @@
 }
 
 .ember-notify-cn .ember-notify {
+  right: 0;
   width: auto;
   min-width: 300px
 }
